--- a/scss/landio.scss
+++ b/scss/landio.scss
@@ -1806,3 +1806,9 @@ $linkedin: #0077b5;
 
   canvas { width: 170px; }
 }
+.row1 
+{
+    margin-left: -0.938rem;
+    margin-right: -0.938rem;
+    margin-top: 5.85rem;
+}
